Fixed overflowing content, and header for small devices

--- a/AboutPage/style.css
+++ b/AboutPage/style.css
@@ -23,10 +23,9 @@ body {
 header {
     background: rgb(62, 62, 62);
     background: linear-gradient(90deg, rgb(45, 71, 69) 0%, rgb(62, 62, 62) 61%);
-    padding: 1rem 1.5rem;
+    padding: 1rem;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
 }
 
 
@@ -44,40 +43,54 @@ header {
     color: white;
 }
 
-.logo a {
-    padding: 0;
+.logo a:nth-of-type(1) {
     text-decoration: none;
     color: rgb(255, 239, 239);
     font-size: 2.5rem;
 }
 
-.logo h3 {
-    margin: 0;
-    padding: 0;
-    letter-spacing: 8px;
+.logo>a:nth-last-of-type(1) {
+    text-decoration: none;
+    letter-spacing: 0.5rem;
+    color: rgb(255, 239, 239);
 }
 
-.pages nav {
+/* .pages>nav {
     display: flex;
-    gap: 2rem;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 0.5rem;
     text-wrap: nowrap;
+} */
+
+.pages>nav {
+    display: flex;
+    justify-content: space-between;
+    text-wrap: nowrap;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    text-align: center;
 }
 
 .pages a {
+    flex-grow: 1;
     text-decoration: none;
-    background-color: rgb(44, 47, 53);
-    padding: 0.5rem 1.5rem;
+    background-color: rgb(59, 83, 80);
+    padding: 0.5rem;
     border-radius: 5px;
-    color: rgb(155, 194, 228);
+    color: rgb(187, 187, 187);
     text-wrap: nowrap;
-    letter-spacing: 2px;
-    transition: background-color 400ms, scale 400ms;
+    letter-spacing: 0.1rem;
+    transition: background-color 400ms, transform 400ms;
 }
 
 .pages a:hover {
-    background-color: rgb(115, 182, 236);
-    scale: 1.15;
+    background-color: rgb(81, 104, 102);
+    transform: scale(1.15);
+}
 
+:active {
+    background-color: white;
 }
 
 /* ------------------------------------------------
@@ -93,7 +106,6 @@ main {
     padding: 2rem 1rem;
     background-image: url("https://www.nultylighting.co.uk/wp-content/uploads/2022/03/uae-pavilion-dubai-expo-2020-banner.jpg");
     background-color: black;
-    display: grid;
 }
 
 article:nth-of-type(1) {
@@ -102,11 +114,12 @@ article:nth-of-type(1) {
     justify-content: center;
 }
 
+/* rgb(62, 62, 62)  */
 article:nth-of-type(1)>h1 {
-    font-size: 54px;
+    font-size: 4em;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: white;
+    color: rgb(217, 217, 217);
     border: gray;
 }
 
@@ -115,12 +128,21 @@ article>div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 8px;
+    background-color: rgb(51, 51, 51, 80%);
+    /* width: 70%; */
+    margin: 0 auto;
 }
 
 article>div>p {
-    max-width: 75ch;
+    max-width: 65ch;
+    line-height: 1.75;
     text-align: center;
-    color: white;
+    color: rgb(201, 199, 199);
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin: 1.5rem;
+
 }
 
 
@@ -173,6 +195,8 @@ footer {
     text-decoration: underline;
 }
 
+
+/*
 @media (width <=768px) {
     header {
         flex-direction: column;
@@ -183,4 +207,9 @@ footer {
         justify-content: space-around;
         gap: 0rem;
     }
+
+    article:nth-of-type(1)>h1 {
+        font-size: 6rem;
+    }
 }
+*/
