--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -32,7 +32,7 @@ body {
 header {
     background: rgb(62, 62, 62);
     background: linear-gradient(90deg, rgb(45, 71, 69) 0%, rgb(62, 62, 62) 61%);
-    padding: 1rem 1.5rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
 }
@@ -53,7 +53,6 @@ header {
 }
 
 .logo a:nth-of-type(1) {
-    /* padding: 0; */
     text-decoration: none;
     color: rgb(255, 239, 239);
     font-size: 2.5rem;
@@ -97,8 +96,8 @@ header {
 .pages a:hover {
     background-color: rgb(81, 104, 102);
     transform: scale(1.15);
-
 }
+
 
 /* ------------------------------------------------
 
@@ -109,11 +108,14 @@ header {
 ---------------------------------------------------*/
 
 main {
-    padding: 2rem 1rem;
+    padding: 2rem 0.5rem;
     background-image: url("https://www.aveso.co.uk/wp-content/uploads/2023/09/Is-Expo-2020-The-Most-Accessible-Expo-Ever-scaled.webp");
     background-color: rgb(82, 103, 96);
     background-repeat: no-repeat;
-
+    display: flex;
+    flex-direction: column;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* main article:nth-of-type(1) {
@@ -122,6 +124,9 @@ main {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: 1fr auto auto auto;
+    display: grid;
+    grid-template-columns: minmax(1rem, auto), 1fr, minmax(1rem, auto);
+    grid-template-rows: repeat(4, auto);
     align-items: center;
     justify-items: center;
     gap: 1rem;
@@ -129,9 +134,6 @@ main {
 
 main article:nth-of-type(1) {
     padding: 2rem 0.5rem;
-    display: grid;
-    grid-template-columns: minmax(1rem, auto), 1fr, minmax(1rem, auto);
-    grid-template-rows: repeat(4, auto);
     align-items: center;
     justify-items: center;
     gap: 1rem;
@@ -163,6 +165,7 @@ main article:nth-of-type(1) {
     color: rgb(62, 62, 62);
     margin-top: 0;
     text-wrap: wrap;
+    /* word-break: break-all; */
     /* text-align: end; */
 }
 
@@ -435,9 +438,9 @@ footer {
     text-decoration: underline;
 }
 
+/*
 
-
-/* MEDIUM DEVICES, TABLETS */
+// MEDIUM DEVICES, TABLETS
 @media (width >=768px) {
 
     header {
@@ -453,7 +456,7 @@ footer {
     article:nth-of-type(1) {
         grid-template-columns: auto;
         grid-template-rows: auto auto auto;
-        /* gap: 2em; */
+        gap: 2em;
     }
 
     .mainSection {
@@ -493,7 +496,7 @@ footer {
     }
 }
 
-/* SMALL DEVICES, MOBILES */
+// SMALL DEVICES, MOBILES 
 
 @media (width <=600px) {
 
@@ -501,3 +504,4 @@ footer {
         font-size: 3.5rem
     }
 }
+*/
